fix a bug in lib.php, fix the scrollbar issue, get the details lesson info

--- a/Display/css/ortho_interface.css
+++ b/Display/css/ortho_interface.css
@@ -18,7 +18,6 @@
 }
 
 html {
-    overflow-y: scroll;
     height: 100%
 }
 
